bug fixed on banner section

--- a/src/Components/Home/FlashSale/FlashSale.css
+++ b/src/Components/Home/FlashSale/FlashSale.css
@@ -1,10 +1,8 @@
-/* Custom Swiper navigation arrows */
+
 .swiper-button-next,
 .swiper-button-prev {
-  color: orange; /* Change arrow color to orange */
+  color: rgb(255, 166, 0);
 }
 
-/* Hide pagination dots */
-.swiper-pagination {
-  display: none; /* Hide the pagination dots */
-}
+
+
